# btc-options-playbook

./: .gitignore  Bitcoin Options Playbook.md  DERIBIT_DVOL, 1D_f4084.csv  IMPLEMENTATION_PLAN.md  README.md  SESSION_HANDOFF.md  Systematic_Strategy_Blueprint.md  User_Requirements.md  pyproject.toml  requirements.txt
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  track-001.md  track-002.md  track-003.md  track-004.md  tracks.md  workflow.md
conductor/code_styleguides/: python.md  typescript.md
src/analyzer/: charts.py  logic.py
src/bot/: main.py
src/database/: ingest_dvol.py  models.py  queries.py  session.py
src/deribit/: client.py
tests/: conftest.py.tmp.47908.1776653451638  test_analyzer.py  test_lifecycle.py  test_queries.py
